<resources>
    <string name="app_name">AnalogReader</string>

    <string name="title">Energy Reading</string>
    <string name="main_label">Live</string>
    <string name="wind_label">Wind: </string>
    <string name="wave_label">Wave: </string>
    <string name="solar_label">Solar: </string>
    <string name="default_analog">0.00</string>
    <string name="gauge_button_label">View Gauges</string>
    <string name="graph_button_label">View Historical Graph</string>
    <string name="live_button_label">View Live</string>

    <string name="graph_label">One Minute History</string>
    <string name="graph">Graph</string>
    <string name="title_activity_graph">GraphActivity</string>

    <string name="ble_not_supported">ble_not_supported</string>
    <string name="error_bluetooth_not_supported">error_bluetooth_not_supported</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="no_data">no_data</string>

    <string name="title_location_permission">title_location_permission</string>
    <string name="text_location_permission">text_location_permission</string>
    <string name="ok">ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
