<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    tools:context=".MainActivity">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_label"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="56sp" />
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="3">
                <TextView
                    android:id="@+id/windLabelView"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wind_label"
                    android:textColor="@color/wind"
                    android:textSize="48sp" />
                <TextView
                    android:id="@+id/windDataView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/default_analog"
                    android:textColor="@color/wind"
                    android:textSize="48sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="3">
                <TextView
                    android:id="@+id/waveLabelView"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wave_label"
                    android:textColor="@color/wave"
                    android:textSize="48sp" />
                <TextView
                    android:id="@+id/waveDataView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/default_analog"
                    android:textColor="@color/wave"
                    android:textSize="48sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="3">
                <TextView
                    android:id="@+id/solarLabelView"
                    android:text="@string/solar_label"
                    android:layout_weight="1"
                    android:textColor="@color/solar"
                    android:textSize="48sp" />
                <TextView
                    android:id="@+id/solarDataView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/default_analog"
                    android:textColor="@color/solar"
                    android:textSize="48sp" />
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/viewGaugeButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/gauge_button_label"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
            <Button
                android:id="@+id/viewGraphButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/graph_button_label"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>